--- a/src/app/alumns/alumn-edit/alumn-edit.component.html
+++ b/src/app/alumns/alumn-edit/alumn-edit.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-4">
-      <h2>Ed alumno</h2>
+      <h2>Actualizar Información del Alumno</h2>
     </div>
   </div>
   <div class="row">
@@ -55,3 +55,4 @@
     </div>
   </div>
 </div>
+<simple-notifications></simple-notifications>
